--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <title>Thumbnail Polls</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
